[gd_scene load_steps=3 format=2]

[ext_resource path="res://Logic/Scripts de escenas/Iniciar.gd" type="Script" id=1]
[ext_resource path="res://images/AppSPR/spr_iniciar.png" type="Texture" id=2]

[node name="Iniciar_sesion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Spr_iniciar" type="TextureRect" parent="."]
margin_right = 319.0
margin_bottom = 470.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Button" type="Button" parent="."]
margin_right = 55.0
margin_bottom = 61.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 30.3074
margin_top = 253.595
margin_right = 287.307
margin_bottom = 287.595
flat = true

[node name="L_correo" type="LineEdit" parent="."]
margin_left = 20.5835
margin_top = 156.833
margin_right = 296.584
margin_bottom = 181.833

[node name="L_pass" type="LineEdit" parent="."]
margin_left = 22.9049
margin_top = 215.64
margin_right = 298.905
margin_bottom = 240.64
secret = true

[node name="Label" type="Label" parent="."]
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 29.0
margin_top = 330.0
margin_right = 283.0
margin_bottom = 370.0

[node name="Timer" type="Timer" parent="."]
[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
